# PortPulse

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  demo.tape
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml
assets/: demo.webm
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: explain.rs  export.rs  live.rs  mod.rs  quarantine.rs  status.rs  trace.rs
crates/core/: Cargo.toml
crates/core/src/: aggregator.rs  classifier.rs  dns.rs  event.rs  export.rs  lib.rs  models.rs  policy.rs  process.rs
crates/ebpf/: Cargo.toml
crates/ebpf/src/: fallback.rs  lib.rs  loader.rs  probes.rs  reader.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs  theme.rs  ui.rs
crates/tui/src/widgets/: connection_graph.rs  connections_table.rs  dns_log.rs  mod.rs  process_tree.rs  suspicious_lane.rs
scripts/: install.sh  run-sudo.sh
