[workspace]
members = [
    "crates/core",
    "crates/ebpf",
    "crates/tui",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PortPulse Contributors"]
license = "MIT"
repository = "https://github.com/portpulse/portpulse"
description = "See every Linux process, port, connection, and DNS lookup live in one interactive map"
keywords = ["network", "monitoring", "ebpf", "tui", "security"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive", "color", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CSV export
csv = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Internal crates
portpulse-core = { path = "crates/core" }
portpulse-ebpf = { path = "crates/ebpf" }
portpulse-tui = { path = "crates/tui" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
codegen-units = 1
